...
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:background="@drawable/background_4"
    android:id = "@+id/layout_main">
    <!--android:background="@drawable/background_anim"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
...
                android:src="@drawable/logo_black"
                android:padding="4dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:drawableLeft="@drawable/ic_person_outline_white_400_24dp"
                    android:drawablePadding="16dp"
                    android:ems="10"
...
                    android:textColorHint="#ff0202"
                    android:textColor="#ff0202" />
            </RelativeLayout>


            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_lock_white_400_24dp"
                android:drawablePadding="16dp"
                android:ems="10"
...
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="#e2e2e2" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Sign in"
                android:onClick="SignIn"
                android:textColor="#4a5a68"
                android:padding="16dp"
...
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAllCaps="false"
                android:background="@drawable/background_btn2"/>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Sign Up"
                android:onClick="SignUp"
                android:textColor="#4a5a68"
                android:padding="16dp"
...
