<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="Menu"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="Calendar"
        app:showAsAction="ifRoom" />
    <!--item
        android:id="@+id/action_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="Add"
        app:showAsAction="ifRoom" /-->
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="Profile"
        app:showAsAction="ifRoom" />




</menu>