<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:orientation="horizontal"
    android:background="?attr/backGroundColor">

...
    <!--app:labelVisibilityMode="labeled"-->

    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="400dp"-->
        <!--android:layout_below="@+id/top_navigation"-->
        <!--android:id="@+id/menu_scrolllist"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:layout_marginTop="1dp"-->
        <!--android:layout_marginBottom="54dp">-->
    <!--</ScrollView>-->
...
