<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="menu_daily" />
    <item type="id" name="menu_weekly" />
    <item type="id" name="menu_monthly" />
</resources>